# rust-wasm-ts-example

./: Dockerfile  docker-compose.yml
wasm/: Cargo.toml
wasm/src/: lib.rs
