[package]
name = "key-and-transactions-manager"
version = "0.0.1"
description = "Keys and transaction manager code in Rust and use in Typescript"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
web3-keystore = "0.4"
rand = "0.8"
getrandom = {version = "0.2", features = ["js"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
log = "0.4"
wasm-log = "0.3"
hex = "0.4"

[dependencies.curv-kzen]
version = "0.10"
features = ["num-bigint"]
default-features = false

[dependencies.web3-core]
git = "https://github.com/tmpfs/web3-core"
branch = "main"

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
branch = "master"
default-features = false

[patch.'https://github.com/ZenGo-X/multi-party-ecdsa']
multi-party-ecdsa = { git = "https://github.com/Bonnai2112/multi-party-ecdsa", branch = "bump-curv-zen-dependencies" }